# abbyy-plc

./: .gitignore  CMakeLists.txt  main.cpp
exceptions/: CMakeLists.txt  destructor_test_failure.cpp  destructor_test_success.cpp  exceptions.h  nesting_test_failure.cpp  nesting_test_success.cpp
linq/: fibonacci.py  linq.py  wordcount.py
vtable/: CMakeLists.txt  vtable.h
